# billit-mcp

./: .dev.vars.example  .env.example  .gitignore  Dockerfile  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/: FUNDING.yml
.github/workflows/: ci.yml  deploy-worker.yml  publish-dxt.yml  publish-pypi.yml
docs/: GUIDE.md  tools.md
dxt/: .dxtignore  README-dxt.md  icon.placeholder.txt  make_icon.py  manifest.json
node/: README.md  package-lock.json  package.json  tsconfig.build.json  wrangler.jsonc
node/src/: config.ts  server.ts  stdio.ts
node/src/tools/: documents.ts  misc.ts  parties.ts  searchFetch.ts
scripts/: smoke.mjs
src/: client.ts  config.ts  errors.ts  server.ts  worker.ts
src/billit_mcp/: __init__.py  __main__.py  auth.py  client.py  errors.py  server.py  settings.py
src/billit_mcp/tools/: __init__.py  _common.py  account.py  documents.py  files.py  inbox.py  orders.py  parties.py  peppol.py  products.py  reports.py  search_fetch.py
src/tools/: orders.ts  peppol.ts  products.ts  util.ts
tests/: conftest.py  test_client.py  test_orders_tool.py  test_settings.py
